test/expected/perr_dup_no_descriptor.out
shit: 2:9: error: Expected a descriptor after '&'.
     2 |  echo 3>&
       |          ^~ here.
